= Mechanize CHANGELOG

=== 2.1 / ??

* Minor enhancements
  * Added Mechanize#content_encoding_hooks which allow handling of
    non-standard content encodings like "agzip".  Patch #125 by kitamomonga
  * Added dom_class to elements and the element matcher like dom_id.  Patch
    #156 by Dan Hansen.
  * Added support for the HTML5 keygen form element.  See
    http://dev.w3.org/html5/spec/Overview.html#the-keygen-element  Patch #157
    by Victor Costan.
  * Mechanize no longer follows meta refreshes that have no "url=" in the
    content attribute to avoid infinite loops.  To follow a meta refresh to
    the same page set Mechanize#follow_meta_refresh_self to true.  Issue #134
    by Jo Hund.

* Bug fixes
  * Mechanize#cookie_jar= works again.  Issue #126
  * Mechanize now handles cookies just as most modern browsers do,
    roughly based on RFC 6265.
    * domain=.example.com (which is invalid) is considered identical to
      domain=example.com.
    * A cookie with domain=example.com is sent to host.sub.example.com
      as well as host.example.com and example.com.
    * A cookie with domain=TLD (no dots) is accepted and sent if the
      host name is TLD, and rejected otherwise.  To retain compatibility
      and convention, host/domain names starting with "local" are exempt
      from this rule.
    * "Secure" cookies are not sent via non-https connection.
    * Subdomain match is not performed against an IP address.
  * The original Referer value persists on redirection.  Issue #150
  * Do not send a referer on a Refresh header based redirection.
  * Fixed encoding error in tests when LANG=C.  Patch #142 by jinschoi.
  * The order of items in a form submission now match the DOM order.  Patch
    #129 by kitamomonga
  * Fixed proxy example in EXAMPLE.  Issue #146 by NielsKSchjoedt

=== 2.0.1 / 2011-06-28

Mechanize now uses minitest to avoid 1.9 vs 1.8 assertion availability in
test/unit

* Bug Fixes
  * Restored Mechanize#set_proxy.  Issue #117, #118, #119